RESOLVED FIXED136378
WebPageProxy::close() is a no-op for terminated processes
https://bugs.webkit.org/show_bug.cgi?id=136378
Summary WebPageProxy::close() is a no-op for terminated processes
Alexey Proskuryakov
Reported 2014-08-29 11:45:41 PDT
WebPageProxy::close() has some clean-up that should happen regardless of whether the page has a running process, but it is a no-op when isValid() returns false.
Attachments
proposed fix (3.82 KB, patch)
2014-08-29 11:53 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2014-08-29 11:46:25 PDT
Alexey Proskuryakov
Comment 2 2014-08-29 11:53:00 PDT
Created attachment 237366 [details] proposed fix
Brady Eidson
Comment 3 2014-08-29 13:22:48 PDT
Comment on attachment 237366 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=237366&action=review > Source/WebKit2/UIProcess/WebPageProxy.cpp:555 > + m_process->removeMessageReceiver(Messages::WebPageProxy::messageReceiverName(), m_pageID); KEY!!!!
WebKit Commit Bot
Comment 4 2014-08-29 14:23:38 PDT
Comment on attachment 237366 [details] proposed fix Clearing flags on attachment: 237366 Committed r173118: <http://trac.webkit.org/changeset/173118>
WebKit Commit Bot
Comment 5 2014-08-29 14:23:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.