Source/WebKit2/UIProcess/WebInspectorProxy.cpp
@@ -163,8 +163,6 @@ void WebInspectorProxy::invalidate()
 
     m_page->process().removeMessageReceiver(Messages::WebInspectorProxy::messageReceiverName(), m_page->pageID());
 
-    m_page->close();
-
     didClose();
 
     m_page = 0;
